--- a/Experiment3_Tutorial/experiment3.Rmd
+++ b/Experiment3_Tutorial/experiment3.Rmd
@@ -1,7 +1,7 @@
 ---
 output:
-  html_document: default
   pdf_document: default
+  html_document: default
 ---
 #Analysis of Recombination rate variation
 ###written by Ulku Huma Altindag
@@ -46,6 +46,8 @@ library(lmerTest)
 library(doBy)
 library(pbkrtest)
 library(tidyr)
+library(reshape2)
+library(car)
 ```
 ##CO groups were defined
 
@@ -177,7 +179,8 @@ summary(fit)
 ###anova results for fecundity
 
 ```{r}
-anova(fit, test="Chisq")
+Experiment3_fecundity_stats=anova(fit, test="Chisq")
+write.csv(Experiment3_fecundity_stats,"Experiment3_fecundity_anova.csv")
 ```
 
 ###post-hoc test for fecundity
@@ -187,6 +190,9 @@ fit_contrast <- emmeans::emmeans(fit, "Treatment", by="Day..letter.of.vial.", mo
 fit_contr <- contrast(fit_contrast, method="trt.vs.ctrl")
 pheno_contr <- as.data.frame(summary(fit_contr))
 pheno_contr
+```
+```{r}
+write.csv(pheno_contr,"Experiment3_fecundity_posthoc.csv")
 ```
 
 ###Now do the same, but with recombination rate
@@ -232,7 +238,7 @@ dataset2$F1.Vial=as.numeric(gsub("[^0-9\\.]","",dataset2$F1.Vial))
 ###logistic regression, similar to a t-test for count data
 
 ```{r}
-fit2=glm(cbind(num_CO_1,num_NCO_1)~(1|F1.Vial)+Treatment*Day..letter.of.vial.,data=dataset2,
+fit2=glmer(cbind(num_CO_1,num_NCO_1)~(1|F1.Vial)+Treatment*Day..letter.of.vial.,data=dataset2,
          family=binomial(link="logit"))
 summary(fit2)
 ```
@@ -240,7 +246,8 @@ summary(fit2)
 ###anova for the recombination rates in vy region
 
 ```{r}
-anova(fit2,test="Chisq")
+anova_vy=Anova(fit2,test="Chisq")
+write.csv(anova_vy,"experiment3_recrate_anova.csv")
 ```
 ```{r}
 fit_contrast_rec <- emmeans::emmeans(fit2, "Treatment", by="Day..letter.of.vial.", mode="kenward-roger")
@@ -250,80 +257,30 @@ pheno_contr_rec <- as.data.frame(summary(fit_contr_rec))
 pheno_contr_rec
 ```
 
-###repeat, but only for day A (days 1-2)
 
 ```{r}
-fit2a=glm(cbind(num_CO_1,num_NCO_1)~(1|F1.Vial)+Treatment,data=dataset2,
-          family=binomial(link="logit"),subset=c(Day..letter.of.vial.=="A"))
-summary(fit2a)
-exp(coef(fit2a)[3]) #At high temperature, odds of crossover are this times as likely as odds of crossover at low temperature for day A
+write.csv(pheno_contr_rec,"Experiment3_recrate_vy_posthoc_table.csv")
+
+#add in odds ratio and standard error
+vy_or=exp(pheno_contr_rec$estimate)
+vy_error=(pheno_contr_rec$SE)
+x=cbind(vy_or,vy_error)
+day=c("a","b","c","d","e","f")
+x=cbind(day,x)
+#convert p-values to stars for plot
+vy_sig=ifelse(pheno_contr_rec$p.value<0.001,"***",ifelse(pheno_contr_rec$p.value<0.01,"**",ifelse(pheno_contr_rec$p.value<0.05,"*","")))
+y=cbind(x,vy_sig)
+odds_ratios=y
+write.csv(y,"Experiment3_odds.csv")
 ```
-
-The odds of having a crossover in the high temperature is `r exp(-0.07490)` times likely for days 1-2.
-
-###repeat, but only for day B (Days 3-4)
-
 ```{r}
-fit2b=glm(cbind(num_CO_1,num_NCO_1)~(1|F1.Vial)+Treatment,data=dataset2,
-          family=binomial(link="logit"),subset=c(Day..letter.of.vial.=="B"))
-summary(fit2b)
-exp(coef(fit2b)[3]) #At high temperature, odds of crossover are this times as likely as odds of crossover at low temperature for day B
-```
+odds_ratios=read.csv("Experiment3_odds.csv", header=TRUE)
 
-###repeat, but only for day C (Days 5-6)
-
-```{r}
-fit2c=glm(cbind(num_CO_1,num_NCO_1)~(1|F1.Vial)+Treatment,data=dataset2,
-          family=binomial(link="logit"),subset=c(Day..letter.of.vial.=="C"))
-summary(fit2c)
-exp(coef(fit2c)[3]) #At high temperature, odds of crossover are this times as likely as odds of crossover at low temperature for day C
-```
-
-###repeat, but only for day D (Days 7-9)
-
-```{r}
-fit2d=glm(cbind(num_CO_1,num_NCO_1)~(1|F1.Vial)+Treatment,data=dataset2,
-          family=binomial(link="logit"),subset=c(Day..letter.of.vial.=="D"))
-summary(fit2d)
-exp(coef(fit2d)[3]) #At high temperature, odds of crossover are this times as likely as odds of crossover at low temperature for day D
-```
-
-###repeat, but only for day E (Days 10-12)
-
-```{r}
-fit2e=glm(cbind(num_CO_1,num_NCO_1)~(1|F1.Vial)+Treatment,data=dataset2,
-          family=binomial(link="logit"),subset=c(Day..letter.of.vial.=="E"))
-summary(fit2e)
-exp(coef(fit2e)[3]) #At high temperature, odds of crossover are this times as likely as odds of crossover at low temperature for day E
-```
-
-###repeat, but only for day F (Days 13-15)
-
-```{r}
-fit2f=glm(cbind(num_CO_1,num_NCO_1)~(1|F1.Vial)+Treatment,data=dataset2,
-          family=binomial(link="logit"),subset=c(Day..letter.of.vial.=="F"))
-summary(fit2f)
-exp(coef(fit2f)[3]) #At high temperature, odds of crossover are this times as likely as odds of crossover at low temperature for day F
-```
-
-###plotting the odd ratio graph
-
-```{r}
-exp3=read.csv(file="exp3.csv", header=T)
-exp3$time=as.character(exp3$time)
-exp3_odds=ggplot(data=exp3, aes(x=time, y=odds, group=1)) +
-  geom_line(size=2)+
-  theme_bw()+
-  theme_update(text = element_text(size=40))+
-  theme(panel.background = element_blank(), axis.line = element_line(colour = "black"))+
-  geom_point()+
-  geom_errorbar(aes(ymin=odds-sd, ymax=odds+sd), width=.2, position=position_dodge(0.05))+
-  geom_hline(yintercept=1, linetype="dashed", color = "grey",size=1)+
-  ylim(0.5,2.6)+
-  ylab("odds")+
-  scale_x_discrete(name="Days", labels=c("1-2","3-4","5-6","7-9","10-12","13-15"))+
-  ggtitle("Odd Ratios for experiment 3")
-exp3_odds
+odds_figure=ggplot(aes(y=vy_or,x=day,group=1),data=odds_ratios)+scale_colour_manual(values=c("black"))+
+  geom_point(alpha=0.6,size=3)+ylab("Odds Ratios")+theme_base()+geom_hline(yintercept = 1,linetype="dashed",color="grey")+ylim(0.5,2.6)+
+  scale_x_discrete(name="Day",labels=c("1-2","3-4","5-6","7-9","10-12","13-15"))+geom_line()+geom_errorbar(aes(ymin=vy_or-vy_error,ymax=vy_or+vy_error))+
+  annotate(geom="text", x=1, y=1.75, label=vy_sig[1],color="black",size=10)+annotate(geom="text", x=2, y=1.75, label=vy_sig[2],color="black",size=10)+annotate(geom="text", x=3, y=1.75, label=vy_sig[3],color="black",size=10)+annotate(geom="text", x=4, y=1.75, label=vy_sig[4],color="black",size=10)+annotate(geom="text", x=5, y=1.75, label=vy_sig[5],color="black",size=10)+annotate(geom="text", x=6, y=1.75, label=vy_sig[6],color="black",size=10)
+odds_figure
 ```
 
 ##THE END
